[package]
name = "bblog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = "0.2.5"
wasm = "0.0.0"
wasm-bindgen = "0.2.84"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls"] }